feat: 브랜딩 페이지 마무리 작업